--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "license": "ISC",
   "devDependencies": {
     "electron": "^1.7.5",
+    "electron-packager": "^9.1.0",
     "electron-reload": "^1.2.1"
   },
   "dependencies": {
